--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.gson-2.2.4.jar=lib/gson-2.2.4.jar
+file.reference.gson-2.2.4.jar-1=/home/atenea/Descargas/google-gson-2.2.4/gson-2.2.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.gson-2.2.4.jar}
+    ${file.reference.gson-2.2.4.jar}:\
+    ${file.reference.gson-2.2.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
